--- a/vapor.yml
+++ b/vapor.yml
@@ -2,9 +2,11 @@ id: 64763
 name: rhschoirs2025
 environments:
     production:
+        domain: rhschoirs.net
         memory: 1024
         cli-memory: 512
         runtime: 'php-8.3:al2'
+        database: rhschoirs2025p
         build:
             - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
             - 'php artisan event:cache'
@@ -13,7 +15,8 @@ environments:
         memory: 1024
         cli-memory: 512
         runtime: 'php-8.3:al2'
+        database: rhschoirs2025p
         build:
-            - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install'
-            - 'php artisan event:cache'
-            - 'npm ci && npm run build && rm -rf node_modules'
+          - 'set COMPOSER_MIRROR_PATH_REPOS=1 && composer install'
+          - 'php artisan event:cache'
+          - 'npm ci && npm run build && rd /s /q "node_modules"'
